--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
+<P>Jana si ja sakam</P>
 <div><img src="Photo © Stefan Rajhl7759 fbb.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
